@@ -5,6 +5,8 @@
 - Send the event time with startup notification instead
   of zero, so focus stealing works properly.
 - Set the foreground color of the lcd clock (bug #4923).
+- Don't escape the command when dropping a .desktop file in the
+  launcher dialog (bug #4818).
 
 4.5.99.1
 ========
